<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/alert_dialog_change_distress_old_distress_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/alertDialogChangeDistress_oldDistress"/>
     <EditText
        android:id="@+id/alert_dialog_change_distress_new_distress_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/alert_dialog_change_distress_old_distress_edit_text"
        android:hint="@string/alertDialogChangeDistress_newDistress"/>
      <EditText
        android:id="@+id/alert_dialog_change_distress_confirm_new_distress_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/alert_dialog_change_distress_new_distress_edit_text"
        android:hint="@string/alertDialogChangeDistress_confirmNewDistress"/>
</RelativeLayout>