<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/alert_dialog_change_password_old_password_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/alertDialogChangePassword_oldPassword"/>
     <EditText
        android:id="@+id/alert_dialog_change_password_new_password_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/alert_dialog_change_password_old_password_edit_text"
        android:hint="@string/alertDialogChangePassword_newPassword"/>
      <EditText
        android:id="@+id/alert_dialog_change_password_confirm_new_password_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/alert_dialog_change_password_new_password_edit_text"
        android:hint="@string/alertDialogChangePassword_confirmNewPassword"/>
</RelativeLayout>