<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/insecurity"
    tools:context=".Login" >
	<!-- android:background="#0099cc" -->
	
    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:keepScreenOn="true"
        android:text="@string/login_login"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    
 <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:drawingCacheQuality="auto"
    android:layout_margin="10dp">  
     <TextView
         android:id="@+id/login_email_address_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:text="@string/login_emailAddress"
         android:layout_marginRight="10dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <EditText
         android:id="@+id/login_email_address_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/login_email_address_text"
         android:inputType="textEmailAddress" />

     <TextView
         android:id="@+id/login_password_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_below="@id/login_email_address_text"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/login_password"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <EditText
         android:id="@+id/login_password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/login_password_text"
         android:layout_below="@id/login_email_address_text"
         android:layout_marginTop="10dp"
         android:inputType="textPassword" />
     
      <CheckBox
	    android:id="@+id/login_stay_signed_in_check_box"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/login_password_edit_text"
	    android:layout_alignParentRight="true"
	    android:text="@string/login_staySignedInCheckBox" />
      
      <Button
          android:text="@string/login_loginButton"
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:layout_below="@id/login_stay_signed_in_check_box"
           android:layout_centerHorizontal="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentLeft="true"
           android:id="@+id/login_login_button" />
      
      
</RelativeLayout>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:drawingCacheQuality="auto"
    android:gravity="bottom"
    android:orientation="vertical" >
  
     <Button
         android:id="@+id/login_register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_register"
         android:textAppearance="?android:attr/textAppearanceMedium" 
         android:layout_marginBottom="20dp"
	     android:layout_marginLeft="20dp"/>

     <Button
         android:id="@+id/login_forgot_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_forgotPassword"
         android:layout_alignParentRight="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_marginBottom="20dp"
	     android:layout_marginRight="20dp" />    
   
</RelativeLayout>
<FrameLayout android:layout_height="match_parent" 
    android:layout_width="match_parent" 
    android:fitsSystemWindows="true">
	<LinearLayout 
    android:background="@color/black_overlay" 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent" 
    android:id="@+id/fullscreen_content_controls" 
    android:orientation="horizontal" 
    android:layout_gravity="bottom|center_horizontal" 
    tools:ignore="UselessParent" 
    style="?buttonBarStyle">

    </LinearLayout>
    
</FrameLayout>

</FrameLayout>