<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/insecurity"
    tools:context=".Login" >
    <!-- android:background="#0099cc" -->
    
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:drawingCacheQuality="auto"
    	android:layout_margin="10dp">
	    
       	 <TextView
	         android:id="@+id/forgotPassword_email_address_text"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center_horizontal"
	         android:text="@string/forgotPassword_emailAddress"
	         android:textColor="#FFFFFFFF"
	         android:textAppearance="?android:attr/textAppearanceMedium" />

	     <EditText
	         android:id="@+id/forgotPassword_email_address_edit_text"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_below="@id/forgotPassword_email_address_text"
	         android:textColor="#FFFFFFFF"
	         android:inputType="textEmailAddress"  />
	     
	     <Button
           android:text="@string/forgotPassword_sendPasswordButton"
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:layout_below="@id/forgotPassword_email_address_edit_text"
           android:layout_alignParentRight="true"
           android:textColor="#FFFFFFFF"
           android:id="@+id/forgotPassword_send_password_button"/>
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:drawingCacheQuality="auto"
	    android:gravity="bottom"
	    android:orientation="vertical" >
  
	     <Button
	         android:id="@+id/forgotPassword_back_button"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/forgotPassword_back"
	         android:textColor="#FFFFFFFF"
	         android:textAppearance="?android:attr/textAppearanceMedium" 
	         android:layout_marginBottom="20dp"
	         android:layout_marginLeft="20dp"/>

	</RelativeLayout>
</FrameLayout>
